---
source: src/parser/statement.rs
expression: "parse_stmt(\"(function (x) {\n            return x * x;\n        })(10);\".into()).unwrap().1"
---
{
  "type": "ExpressionStatement",
  "expression": {
    "type": "CallExpression",
    "callee": {
      "type": "FunctionExpression",
      "id": null,
      "params": [
        {
          "type": "Identifier",
          "name": "x",
          "start": 11,
          "end": 12
        }
      ],
      "body": {
        "type": "BlockStatement",
        "body": [
          {
            "type": "ReturnStatement",
            "argument": {
              "type": "BinaryExpression",
              "operator": "*",
              "left": {
                "type": "Identifier",
                "name": "x",
                "start": 35,
                "end": 36
              },
              "right": {
                "type": "Identifier",
                "name": "x",
                "start": 39,
                "end": 40
              },
              "start": 35,
              "end": 40
            },
            "start": 28,
            "end": 41
          }
        ],
        "start": 14,
        "end": 51
      },
      "async": false,
      "start": 1,
      "end": 51
    },
    "arguments": [
      {
        "type": "Literal",
        "value": 10.0,
        "start": 53,
        "end": 55
      }
    ],
    "start": 1,
    "end": 56
  },
  "start": 0,
  "end": 57
}
